[package]
name = "pbfweb"
version = "0.1.0"
authors = ["John Edmonds <john.a.edmonds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3", features = ["Location", "Window", "Crypto", "SubtleCrypto", "CryptoKey", "AesCbcParams"] }
js-sys = "0.3.45"
base64 = "0.13.0"
once_cell = "1.4.1"
wasm-bindgen-futures = "0.4.18"
futures = "0.3.6"
itertools = "0.9.0"

[lib]
crate-type = ["rlib", "cdylib"]